<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="app_name">CapRacing</string>
    <string name="action_settings">settings</string>
    <string name="name_label">Nome:</string>
    <string name="name_jogar">Jogar</string>
    <string name="name_opcoes">Opções</string>
    <string name="name_sair">Sair</string>
    <string name="name_som">Som:</string>
    <string name="name_musica">Música:</string>
    <string name="name_audio">Áudio:</string>
    <string name="name_menu">Menu</string>
    <string name="name_campeonato">Campeonato</string>
    <string name="name_arcade">Arcade</string>
    <string name="name_voltar">Voltar</string>
    <string name="name_selecionar">Selecionar</string>
    <string name="name_escolher">Escolha a Pista</string>
    <string name="name_pista1">Pista 1</string>
    <string name="name_pista2">Pista 2</string>
    <string name="name_pista3">Pista 3</string>
    <string name="name_escolhertampa">Escolha sua Tampa</string>
    <string name="name_tampa1">Tampa 1</string>
    <string name="name_tampa2">Tampa 2</string>
    <string name="name_voltarmenu">Voltar ao menu</string>
    <string name="name_voltarjogo">Voltar ao jogo</string>
     <string name="name_treinar">Treinamento</string>
          <string name="name_time">Time-Trial</string>
     
    
</resources>