<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/butao_opcoes"
        style="@style/main_menu_btnTop"
        android:layout_centerVertical="true"
        android:background="@drawable/butao"
        android:text="@string/name_opcoes" />

    <Button
        android:id="@+id/butao_jogar"
        style="@style/main_menu_btnTop"
        android:layout_above="@+id/butao_opcoes"
        android:layout_alignBottom="@+id/butao_opcoes"
        android:layout_marginBottom="92dp"
        android:background="@drawable/butao"
        android:text="@string/name_jogar" />

    <Button
        android:id="@+id/butao_sair"
        style="@style/main_menu_btnTop"
        android:layout_alignTop="@+id/butao_opcoes"
        android:layout_below="@+id/butao_opcoes"
        android:layout_marginTop="92dp"
        android:background="@drawable/butao"
        android:text="@string/name_sair" />

</RelativeLayout>