<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <SeekBar
        android:id="@+id/seekBarMusica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarSom"
        android:layout_alignRight="@+id/seekBarSom"
        android:layout_below="@+id/seekBarSom"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBarMusica"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/name_musica" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="false"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="14dp"
        android:text="@string/name_audio"
        android:textSize="16dp" />

    <SeekBar
        android:id="@+id/seekBarSom"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="72dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBarSom"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/name_som" />

    <Button
        android:id="@+id/butao_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/name_menu" />

</RelativeLayout>